Update ChatListener.java
Changed variable for "toList" for java 1.8 to eliminate the "toList" error given when executing the ShadowJAR